--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -500,18 +500,22 @@
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>net.liftweb.lift.json</artifactId>
-			<version>2.4.0.1</version>
+			<version>2.4.0.2</version>
 			<exclusions>
 				<exclusion>
 					<groupId>net.liftweb</groupId>
 					<artifactId>lift-json_${scala.version}</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>net.liftweb</groupId>
+					<artifactId>lift-json-ext_${scala.version}</artifactId>
+				</exclusion>				
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>net.liftweb.lift.json.source</artifactId>
-			<version>2.4.0.1</version>
+			<version>2.4.0.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
@@ -575,19 +579,6 @@
 			<artifactId>com.springsource.com.sun.jna</artifactId>
 			<version>3.0.5</version>
 		</dependency>
-
-		<!-- spray -->
-
-
-		<!-- dependency> <groupId>org.elyast.orbit.osgi</groupId> <artifactId>org.parboiled</artifactId> 
-			<version>1.0.2.1</version> </dependency> <dependency> <groupId>org.fusesource.scalate</groupId> 
-			<artifactId>scalate-core</artifactId> <version>1.5.3</version> </dependency> 
-			<dependency> <groupId>org.elyast.orbit.osgi</groupId> <artifactId>twirl</artifactId> 
-			<version>0.5.2.0</version> </dependency> <dependency> <groupId>org.elyast.orbit.osgi</groupId> 
-			<artifactId>com.googlecode.concurrentlinkedhashmap</artifactId> <version>1.2.0.0</version> 
-			</dependency> <dependency> <groupId>org.fusesource.scalate</groupId> <artifactId>scalate-util</artifactId> 
-			<version>1.5.3</version> </dependency> <dependency> <groupId>org.jvnet</groupId> 
-			<artifactId>mimepull</artifactId> <version>1.6</version> </dependency -->
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>unfiltered</artifactId>
@@ -604,6 +595,23 @@
 			<artifactId>unfiltered.source</artifactId>
 			<version>0.6.3.0</version>
 		</dependency>
+		<!-- Lift web framework -->
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>net.liftweb.lift</artifactId>
+			<version>2.4.0.0</version>
+			<!--  exclusions>
+				<exclusion>
+					<groupId>net.liftweb</groupId>
+					<artifactId>lift-webkit_${scala.version}</artifactId>
+				</exclusion>
+			</exclusions-->
+		</dependency>
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>net.liftweb.lift.source</artifactId>
+			<version>2.4.0.0</version>
+		</dependency>		
 	</dependencies>
 	<build>
 		<plugins>
