--- a/osgi/bundle/net.liftweb.lift.json/pom.xml
+++ b/osgi/bundle/net.liftweb.lift.json/pom.xml
@@ -8,7 +8,7 @@
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>net.liftweb.lift.json</artifactId>
-	<version>2.4.0.1</version>
+	<version>2.4.0.2</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -18,5 +18,13 @@
 		<bundle.symbolicName>net.liftweb.lift.json</bundle.symbolicName>
 		<wrapped.groupId>net.liftweb</wrapped.groupId>
 	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>lift-json-ext_${scala.version}</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
