added lift web part

--- a/osgi/bundle/net.liftweb.lift/pom.xml
+++ b/osgi/bundle/net.liftweb.lift/pom.xml
@@ -33,16 +33,6 @@
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
-			<artifactId>lift-common_${scala.version}</artifactId>
-		</dependency>		
-		<dependency>
-			<groupId>${wrapped.groupId}</groupId>
-			<version>${wrapped.version}</version>
-			<artifactId>lift-wizard_${scala.version}</artifactId>
-		</dependency>		
-		<dependency>
-			<groupId>${wrapped.groupId}</groupId>
-			<version>${wrapped.version}</version>
 			<artifactId>lift-widgets_${scala.version}</artifactId>
 		</dependency>		
 		<dependency>
@@ -53,23 +43,23 @@
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
+			<artifactId>lift-actor_${scala.version}</artifactId>
+		</dependency>		
+		<!-- dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>lift-db_${scala.version}</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
 			<artifactId>lift-mapper_${scala.version}</artifactId>
 		</dependency>		
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
 			<artifactId>lift-record_${scala.version}</artifactId>
-		</dependency>		
-		<dependency>
-			<groupId>${wrapped.groupId}</groupId>
-			<version>${wrapped.version}</version>
-			<artifactId>lift-actor_${scala.version}</artifactId>
-		</dependency>		
-		<dependency>
-			<groupId>${wrapped.groupId}</groupId>
-			<version>${wrapped.version}</version>
-			<artifactId>lift-db_${scala.version}</artifactId>
-		</dependency>		
+		</dependency>						
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
@@ -79,12 +69,17 @@
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
 			<artifactId>lift-mongodb-record_${scala.version}</artifactId>
-		</dependency>		
+		</dependency>	
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>lift-wizard_${scala.version}</artifactId>
+		</dependency>					
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<version>${wrapped.version}</version>
 			<artifactId>lift-squeryl-record_${scala.version}</artifactId>
-		</dependency>		
+		</dependency-->		
 	</dependencies>
 
 </project>
