--- a/osgi/bundle/net.liftweb.lift.json/pom.xml
+++ b/osgi/bundle/net.liftweb.lift.json/pom.xml
@@ -25,6 +25,11 @@
 			<version>${wrapped.version}</version>
 			<artifactId>lift-json-ext_${scala.version}</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<version>${wrapped.version}</version>
+			<artifactId>lift-common_${scala.version}</artifactId>
+		</dependency>		
 	</dependencies>
 
 </project>
