--- a/osgi/source/org.scalamock.source/pom.xml
+++ b/osgi/source/org.scalamock.source/pom.xml
@@ -2,14 +2,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>bundle</artifactId>
+		<artifactId>source</artifactId>
 		<groupId>org.elyast.orbit.osgi</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
-	<artifactId>org.scalamock</artifactId>
+	<artifactId>org.scalamock.source</artifactId>
 	<version>2.3.0.1</version>
-	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
@@ -24,16 +23,19 @@
 			<groupId>${wrapped.groupId}</groupId>
 			<artifactId>scalamock-scalatest-support_${scala.version}</artifactId>
 			<version>${wrapped.version}</version>
+			<classifier>sources</classifier>
 		</dependency>
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<artifactId>scalamock-junit3-support_${scala.version}</artifactId>
 			<version>${wrapped.version}</version>
+			<classifier>sources</classifier>
 		</dependency>		
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<artifactId>scalamock-compiler-plugin_${scala.version}</artifactId>
 			<version>${wrapped.version}</version>
+			<classifier>sources</classifier>
 		</dependency>
 	</dependencies>
 </project>
