--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>org.lang.scala.tools.feature</module>
 		<module>akka.feature</module>
 		<module>unfiltered.feature</module>
+		<module>lift.feature</module>
 		<module>repository</module>
 	</modules>
 
