--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -608,7 +608,7 @@
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>net.liftweb.lift</artifactId>
-			<version>2.4.0.0</version>
+			<version>2.4.0.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>net.liftweb</groupId>
@@ -633,14 +633,23 @@
 				<exclusion>
 					<groupId>net.liftweb</groupId>
 					<artifactId>lift-widgets_${scala.version}</artifactId>
-				</exclusion>											
+				</exclusion>		
+				<exclusion>
+					<groupId>net.liftweb</groupId>
+					<artifactId>lift-proto_${scala.version}</artifactId>
+				</exclusion>													
 			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>net.liftweb.lift.source</artifactId>
-			<version>2.4.0.0</version>
-		</dependency>		
+			<version>2.4.0.1</version>
+		</dependency>	
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>nu.validator.htmlparser</artifactId>
+			<version>1.2.1.1</version>
+		</dependency>			
 	</dependencies>
 	<build>
 		<plugins>
