Added lift persistence

--- a/system.tests/src/main/resources/fileBased.conf
+++ b/system.tests/src/main/resources/fileBased.conf
@@ -7,7 +7,7 @@ akka {
     mailbox {
       file-based {
         # directory below which this queue resides
-        directory-path = "./target/_mb"
+        directory-path = "./target"
       }
     }
   }
