--- a/spray.web/build.properties
+++ b/spray.web/build.properties
@@ -1,4 +1,6 @@
-source.. = src/main/java/
+source.. = src/main/java/,\
+           src/main/resources/,\
+           src/main/scala/
 output.. = target/classes/
 bin.includes = META-INF/,\
                .
