--- a/system.tests/pom.xml
+++ b/system.tests/pom.xml
@@ -10,7 +10,7 @@
 	</prerequisites>
 
 	<properties>
-		<tycho.version>0.14.1</tycho.version>
+		<tycho.version>0.15.0</tycho.version>
 		<scala.version>2.9.1</scala.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -46,6 +46,11 @@
 			<layout>p2</layout>
 			<url>jar:file:${user.home}/.m2/repository/org/elyast/orbit/org.elyast.orbit.repository/${project.version}/org.elyast.orbit.repository-${project.version}.zip!/</url>
 		</repository>
+		<repository>
+			<id>oss</id>
+			<name>oss</name>
+			<url>http://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>		
 	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
