added everything to build only tests left and orbit pretty much ready to be reused for writing mini frameworks for osgi on top of scala ecosystem

--- a/osgi/bundle/pom.xml
+++ b/osgi/bundle/pom.xml
@@ -89,5 +89,9 @@
 		<module>unfiltered</module>
 		<module>net.liftweb.lift</module>
 		<module>nu.validator.htmlparser</module>
+		<module>net.liftweb.lift.persistence</module>
+		<module>org.squeryl</module>
+		<module>zkclient</module>
+		<module>redisclient</module>
 	</modules>
 </project>
