--- a/unfiltered.webapp/build.properties
+++ b/unfiltered.webapp/build.properties
@@ -1,6 +1,6 @@
-source.. = src/main/resources/,\
-           src/main/scala/
+source.. = src/main/scala/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               .,\
-               WEB-INF/
+               WEB-INF/,\
+               .
+               
