--- a/unfiltered.webapp/pom.xml
+++ b/unfiltered.webapp/pom.xml
@@ -9,4 +9,12 @@
 	</parent>
 	<artifactId>unfiltered.webapp</artifactId>
 	<packaging>eclipse-plugin</packaging>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
